--- a/styles.css
+++ b/styles.css
@@ -2031,6 +2031,25 @@ html {
     margin-top: 4rem;
     margin-bottom: 4rem;
     padding: 0;
+    background: #fcfae2;
+}
+
+.business-units h3 {
+    text-align: center;
+    margin-bottom: 1rem;
+    color: #333;
+    font-size: 2em;
+    padding-top: 2rem;
+}
+
+.category-intro {
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto 2rem;
+    font-size: 1.2em;
+    color: #555;
+    line-height: 1.6;
+    padding: 0 2rem;
 }
 
 .product-grid {
